Remove opacity to fix colors on dark mode

--- a/src/app/page-manual-calouro/page-manual-calouro.page.scss
+++ b/src/app/page-manual-calouro/page-manual-calouro.page.scss
@@ -21,7 +21,7 @@
 }
 
 .bg-yellow {
-  background-color: #fee11975;
+  background-color: #fff295;
 }
 
 .bg-grey {
@@ -51,15 +51,15 @@
 }
 
 .bg-light-blue {
-  background-color: #1e8a7025;
+  background-color: #e2eeea;
 }
 
 .bg-light-green {
-  background-color: #c1db3950;
+  background-color: #edf4c7;
 }
 
 .bg-light-yellow {
-  background-color: #fee11925;
+  background-color: #fffbe4;
 }
 
 .padding-vertical-10 {
@@ -68,5 +68,5 @@
 }
 
 .bg-beige {
-  background-color: #fd740025;
+  background-color: #ffebda;
 }
